OO-9280: move main selectus package to OpenOlat, make it starts
Move to jakarta.*, remove custom UI creators for dmz, add a selectus
manager role, remove Flexi QL